Bug 386416 - Integer and Number pair attributes such as the order attribute of feConvolveMatrix should allow an optional comma as separator. r=tor,sr+a=roc